--- a/order-dev.yml
+++ b/order-dev.yml
@@ -11,3 +11,5 @@ eureka:
     hostname: localhost
     prefer-ip-address: true
     instance-id: ${spring.cloud.client.ipAddress}:${server.port}
+
+flow: lyj
