--- a/fly-order-dev.yml
+++ b/fly-order-dev.yml
@@ -12,4 +12,5 @@ eureka:
     prefer-ip-address: true
     instance-id: ${spring.cloud.client.ipAddress}:${server.port}
 
-flow: lyj
+flow: 
+  a: lyj
